--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 matplotlib==3.4.3
 Flask==2.2.2
 Flask-Cors==3.0.10
-tensorflow==2.8.0
-protobuf>=3.19.0
+tensorflow
+protobuf
 numpy==1.21.2
 gunicorn==21.2.0
